--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,35 @@
 	    <version>5.4.12.Final</version>
 	</dependency>
 	  	
+	<dependency>  
+    	<groupId>org.springframework.security</groupId>  
+    	<artifactId>spring-security-taglibs</artifactId>  
+    	<version>5.3.0.RELEASE</version>  
+	</dependency>
+	 
+	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-core</artifactId>
+	    <version>5.3.0.RELEASE</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-web</artifactId>
+	    <version>5.3.0.RELEASE</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
+	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-config</artifactId>
+	    <version>5.3.0.RELEASE</version>
+	</dependency>
+		
+			
+		
 	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 	<dependency>
 	    <groupId>mysql</groupId>
