--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
 	    <version>5.4.12.Final</version>
 	</dependency>
 	  	
+	<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
+	<dependency>
+	    <groupId>com.sun.mail</groupId>
+	    <artifactId>javax.mail</artifactId>
+	    <version>1.6.2</version>
+	</dependency>
+
+		
 	<dependency>  
     	<groupId>org.springframework.security</groupId>  
     	<artifactId>spring-security-taglibs</artifactId>  
@@ -85,5 +93,23 @@
       <version>4.2</version>
       <scope>test</scope>
     </dependency>
+    
   </dependencies>
+  
+  <build>
+		<finalName>HibernateBackend</finalName>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.2</version>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
